--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <Switch
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="jijiji"
+        android:checked="true"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Escriba un titulo"
+        android:id="@+id/et_titulo"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_generar"
+        android:text="GENERAR NOTICIA RAMDOM"/>
 
     <ListView
         android:layout_width="match_parent"
@@ -11,5 +26,7 @@
 
 
     </ListView>
+
+
 
 </LinearLayout>
